src/tests/snapshots/learn_chumsky__tests__expr__literal_expressions-11.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
 "abc" 
---

Some(
    Spanned(
        String("abc"),
        1..6,
    ),
)

--- Errors ---
[]
---
