src/tests/snapshots/learn_chumsky__tests__expr__literal_expressions-12.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
 "Hello World!\n" 
---

Some(
    (
        String("Hello World!\n"),
        1..17,
    ),
)

--- Errors ---
[]
---
