src/tests/snapshots/learn_chumsky__tests__expr__literal_expressions-3.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
1.0
---

Some(
    Spanned(
        Float(1, 0),
        0..3,
    ),
)

--- Errors ---
[]
---
