src/tests/snapshots/learn_chumsky__tests__expr__literal_expressions-4.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
0.
---

Some(
    (
        Float(0, 0),
        0..2,
    ),
)

--- Errors ---
[]
---
