src/tests/snapshots/learn_chumsky__tests__expr__literal_expressions-6.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
9_999_999_999_999.999_999_999
---

Some(
    Spanned(
        Float(9999999999999, 999999999),
        0..29,
    ),
)

--- Errors ---
[]
---
