src/tests/snapshots/learn_chumsky__tests__expr__literal_expressions-7.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
'a'
---

Some(
    (
        Char('a'),
        0..3,
    ),
)

--- Errors ---
[]
---
