src/tests/snapshots/learn_chumsky__tests__expr__literal_expressions-8.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
'\n'
---

Some(
    Spanned(
        Char('\n'),
        0..4,
    ),
)

--- Errors ---
[]
---
