src/tests/snapshots/learn_chumsky__tests__expr__literal_expressions-9.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
'\t'
---

Some(
    Spanned(
        Char('\t'),
        0..4,
    ),
)

--- Errors ---
[]
---
