src/tests/snapshots/learn_chumsky__tests__expr__literal_expressions.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
823_472_340
---

Some(
    (
        Int(823472340),
        0..11,
    ),
)

--- Errors ---
[]
---
