src/tests/snapshots/learn_chumsky__tests__expr__parse_item-2.snap
---
source: src/test.rs
expression: maybe_items
---
Ok(
    Func {
        name: (
            "testing",
            5..12,
        ),
        params: [],
        body: None,
    },
)
