src/tests/snapshots/learn_chumsky__tests__expr__record_expressions-2.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
.{ name: "Record", fields: todo() }
---

Some(
    (
        Record {
            name: None,
            fields: [
                (
                    (
                        "name",
                        3..7,
                    ),
                    (
                        String("Record"),
                        9..17,
                    ),
                ),
                (
                    (
                        "fields",
                        19..25,
                    ),
                    (
                        Call(
                            (
                                Ident("todo"),
                                27..31,
                            ),
                            [],
                        ),
                        27..33,
                    ),
                ),
            ],
        },
        0..35,
    ),
)

--- Errors ---
[]
---
